Continue heartbleed lab work
just gotta update the links for the videos with an introductory video and a dubbed walkthrough of the lab and it'll be complete unless someone wants to add more text

--- a/heartbleed-lab/introduction-page.html
+++ b/heartbleed-lab/introduction-page.html
@@ -18,7 +18,7 @@
 			background-color: #f2f2f2;
 		}
 		.container {
-			max-width: 800px;
+			max-width: 1120px;
 			margin: 0 auto;
 			padding: 20px;
 		}
@@ -84,17 +84,15 @@
 	<div class="container">
 		<h1>Before your Move On</h1>
 		<p>We have created a hands-on activity for you to demonstrate a cybersecurity vulnerability.</p>
-        <p>While downloading the file, feel free to watch these videos or browse the site.</p>
-        <p>On the left, we have an instructional video for how to download Virtual Box.</p>
-        <p>On the right is the tutorial to guide you to complete the lab.</p>
-		<div class="video-container">
-			<div class="video">
-				<iframe width="100%" height="315" src="https://www.youtube.com/embed/sB_5fqiysi4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-			<div class="video">
-				<iframe width="100%" height="315" src="https://drive.google.com/file/d/1GPHAmtlwfsMJSHkZbP1oKMCJ04RMyDoO/preview" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>We recommend you watch the video introducing you to the heartbleed lab before continueing to download the lab.</p>
+        <p>This way you know what you are going to be attempting.</p>
+		
+		<div class="video-container" style="text-align: left;">
+			<div class="video" >
+				<iframe width="1120" height="630" src="https://www.youtube.com/embed/sB_5fqiysi4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
+		
 		<div class="button-container">
             <button class="blue" onclick="skip()">Back to Site</button>
 			<button class="white" onclick="download()">Continue to Heartbleed Lab</button>
