--- a/heartbleed-lab/main-page.html
+++ b/heartbleed-lab/main-page.html
@@ -20,7 +20,7 @@
                 background-color: #f2f2f2;
             }
             .container {
-                max-width: 800px;
+                max-width: 1120px;
                 margin: 0 auto;
                 padding: 20px;
             }
@@ -77,17 +77,11 @@
     </head>
     <body>
         <div class="container">
-            <h1>Before your Move On</h1>
-            <p>We have created a hands-on activity for you to demonstrate a cybersecurity vulnerability.</p>
-            <p>While downloading the file, feel free to watch these videos or browse the site.</p>
-            <p>On the left, we have an instructional video for how to download Virtual Box.</p>
-            <p>On the right is the tutorial to guide you to complete the lab.</p>
+            <h1>Heart Bleed Lab Instructions</h1>
+            <p>Below are video instructions for completing the heartbleed lab for you to watch while the files you need are downloading.</p>
             <div class="video-container">
                 <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/sB_5fqiysi4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="video">
-                    <iframe width="100%" height="315" src="https://drive.google.com/file/d/1GPHAmtlwfsMJSHkZbP1oKMCJ04RMyDoO/preview" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="1120" height="630" src="https://drive.google.com/file/d/1GPHAmtlwfsMJSHkZbP1oKMCJ04RMyDoO/preview" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             
