--- a/heartbleed-lab/introduction-page.html
+++ b/heartbleed-lab/introduction-page.html
@@ -89,7 +89,7 @@
 		
 		<div class="video-container" style="text-align: left;">
 			<div class="video" >
-				<iframe width="1120" height="630" src="https://www.youtube.com/embed/sB_5fqiysi4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="1120" height="630" src="https://www.youtube.com/embed/FDrUqaQIq60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 		
