--- a/heartbleed-lab/introduction-page.html
+++ b/heartbleed-lab/introduction-page.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Heartbleed Lab</title>
     <link rel="stylesheet" href="/styles/main.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div class="topnav" id="Navbar">
