Added the proper links
Windows - https://youtu.be/nN6CxUheMsw
Mac - https://youtu.be/gtGvDSzbQJg
Linux - https://youtu.be/jM68YPzSqVw

--- a/heartbleed-lab/main-page.html
+++ b/heartbleed-lab/main-page.html
@@ -88,9 +88,9 @@
                 <div id="os-specific-links" style="display: none;"> 
                     <!-- These links need to get replaced with the actual video links but these are temporary place holders-->
                     <Image id="Default" src="https://drive.google.com/file/d/1GPHAmtlwfsMJSHkZbP1oKMCJ04RMyDoO/preview" />
-                    <Image id="Windows" src="https://www.youtube.com/embed/wO8WynXQhls" />
-                    <Image id="Mac" src="https://www.youtube.com/embed/PXPtjhFd0kc" />
-                    <Image id="Linux" src="https://www.youtube.com/embed/6EuGPWRN0bo" />
+                    <Image id="Windows" src="https://www.youtube.com/embed/nN6CxUheMsw" />
+                    <Image id="Mac" src="https://www.youtube.com/embed/gtGvDSzbQJg" />
+                    <Image id="Linux" src="https://www.youtube.com/embed/jM68YPzSqVw" />
                     <script> 
                         var lastState;
                         $(document).ready(function() { lastState = vidLinkUpdater("HBbut","os-specific"); });
